# follow_bevy_platformer

./: Cargo.toml  README.md
src/: animation.rs  camera.rs  collectable.rs  editor.rs  ghost.rs  hit_box.rs  loader.rs  main.rs  map.rs  menu.rs  player.rs  tile_map.rs  user_input.rs
src/map/: collectable.rs  levels.rs  mod.rs  square.rs  tile_map.rs
