[package]
name = "bevy_platformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
base64 = "0.21.2"
bevy = "0.10.1"
bevy_editor_pls = "0.4.0"
bevy_rapier2d = "0.21.0"
bincode = "1.3.3"
cli-clipboard = "0.4.0"
leafwing-input-manager = "0.9.2"
rand = "0.8.5"
ron = "0.8.0"
serde = "1.0.164"

[profile.dev.package."*"]
opt-level = 3
